<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Research Studios Austria Forschungsges.m.b.H.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="admob_id">test</string> <!-- AdMob Id for test purposes only-->

    <string name="app_name">Web Of Needs</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_compose">Compose</string>

    <!-- Error Messages -->
    <string name="error_login_failed">Login Failed, Username Password combination not correct</string>
    <string name="error_register_email_registered">Register Failed, Username already taken</string>
    <string name="error_server_not_found">Login Failed, server was not found</string>
    <string name="error_register_pw_notequal">Repeat Password does not match</string>
    <string name="error_register_pw_short">Password too short (minimum 6 Characters)</string>
    <string name="error_register_email_invalid">E-Mail Address is not valid</string>

    <!-- Generic Items -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="to">matched to</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="sharechooser">Share through&#8230;</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="loading">Loading&#8230;</string>
    <string name="processing">Processing&#8230;</string>
    <string name="closed">closed</string>
    <string name="username">Email address</string>
    <string name="password">Password</string>
    <string name="repeatpassword">Repeat Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up</string>
    <string name="back">Back</string>

    <!-- MENU ITEMS -->
    <string name="mi_profile">Profile</string>
    <string name="mi_mailbox">Conversations</string>
    <string name="mi_createpost">Create Post</string>
    <string name="mi_postbox">Postbox</string>

    <!-- PREFERENCES -->
    <string name="pref_header">Preferences</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notification">Notification</string>
    <string name="pref_general">General</string>

    <string name="pref_general_showstartup">Show Startup Screen</string>
    <string name="pref_general_setting2">GeneralSetting2</string>
    <string name="pref_general_setting3">GeneralSetting3</string>
    <string name="pref_general_setting4">GeneralSetting4</string>
    <string name="pref_notification_setting1">NotificationSetting1</string>
    <string name="pref_notification_setting2">NotificationSetting2</string>
    <string name="pref_notification_setting3">NotificationSetting3</string>
    <string name="pref_notification_setting4">NotificationSetting4</string>

    <string name="pref_general_showstartup_summary">Shows the Info-Pages to the WoN-App</string>
    <string name="pref_general_setting2_summary">GeneralSetting2 Summary</string>
    <string name="pref_general_setting3_summary">GeneralSetting3 Summary</string>
    <string name="pref_general_setting4_summary">GeneralSetting4 Summary</string>
    <string name="pref_notification_setting1_summary">NotificationSetting1 Summary</string>
    <string name="pref_notification_setting2_summary">NotificationSetting2 Summary</string>
    <string name="pref_notification_setting3_summary">NotificationSetting3 Summary</string>
    <string name="pref_notification_setting4_summary">NotificationSetting4 Summary</string>

    <!-- WELCOME TEXT -->
    <string name="welcome_page_create">Create a new post and choose its type: offer, want, do something together or change something.</string>
    <string name="welcome_page_add">Add optional information like time or location to refine your post.</string>
    <string name="welcome_page_match">Get notified by matches that fit best your individual post.</string>
    <string name="welcome_page_create_header">Create</string>
    <string name="welcome_page_add_header">Add</string>
    <string name="welcome_page_match_header">Match!</string>
    <string name="welcome_skip">Skip</string>

    <!-- Create Post View -->
    <string name="create_title">Title</string>
    <string name="create_description">Description</string>
    <string name="create_tags">Tags</string>
    <string name="create_images">Images</string>
    <string name="create_location">Location</string>
    <string name="create_datetime">Date/Time</string>
    <string name="create_recurrencedate">Recurrence Date</string>
    <string name="create_choosedatetime">Choose Date/Time</string>
    <string name="create_chooserecurrencedate">Choose Date/Time</string>
    <string name="create_recurrence">Recurring Event</string>
    <string name="create_tags_2">Using tags improves results by a great deal.</string>
    <string name="create_type">Type</string>
    <string name="create_type_spinner_choose">Select a Type</string>
    <string name="type_offer">Offer</string>
    <string name="type_want">Want</string>
    <string name="type_activity">Activity</string>
    <string name="type_change">Change</string>
    <!-- Create Post Hints-->

    <!-- Demand -->
    <string name="create_title_demand_hint">Roughly, what are you looking for?</string>
    <string name="create_description_demand_hint">And now with details!\n\n(By the way, there\'s specialised textboxes for things like pickup address or time of availability)</string>
    <string name="create_location_demand_hint">Where should the thing be available? i.e. where you pick it up or where should it be deliverd to?</string>
    <string name="create_tags_demand_hint">e.g. Shoes, Entertainment, Suited For Small Children,&#8230;</string>
    <!-- Supply -->
    <string name="create_title_supply_hint">Roughly, what are you offering?</string>
    <string name="create_description_supply_hint">And now with details!\n\n(By the way, there\'s specialised textboxes for things like delivery address or time of availability)</string>
    <string name="create_location_supply_hint">Where\'s your offer available? i.e. where can people pick it up or where would you deliver it too?</string>
    <string name="create_tags_supply_hint">e.g. Shoes, Entertainment, Suited For Small Children,&#8230;</string>
    <!-- Together -->
    <string name="create_title_together_hint">Roughly, what are you planning for which you need people?</string>
    <string name="create_description_together_hint">And now with details!\n\n(By the way, there\'s specialised textboxes for specifying an event location and time)</string>
    <string name="create_location_together_hint">Where\'s the action happening?</string>
    <string name="create_tags_together_hint">e.g. Soccer, Party, Discussion, Group, Food Coop,&#8230;</string>
    <!-- Change -->
    <string name="create_title_change_hint">Roughly, what are you pointing out and want to change?</string>
    <string name="create_description_change_hint">And now with details!\n\n(By the way, there\'s specialised textboxes for when and where the thing you want to change occurred.)</string>
    <string name="create_location_change_hint">Where did the problem occur / where have things to be changed?</string>
    <string name="create_tags_change_hint">e.g. FML, Clean Park Initiative, Recycling, Occupy Wallstreet, Privacy,&#8230;</string>
    
    <!-- TOAST TEXTS -->
    <string name="error_no_camera">Camera is not available on the device</string>
    <string name="error_saving_picture">Error saving imagefile</string>
    <string name="toast_back_to_exit">Press back once again to exit the app</string>
    <string name="toast_create_saved">Post was saved</string>
    <string name="toast_create_draft">Draft created</string>
    <string name="toast_create_dismiss">Post was dismissed</string>
    <string name="toast_close_mypost">Post was closed</string>
    <string name="toast_register_success">Registration successful</string>

    <!-- DIALOG TEXTS -->
    <string name="dialog_delete_image_text">Do you want to remove the Image from the Post?</string>
    <string name="dialog_delete_image_title">Remove Image</string>
    <string name="dialog_set_title_image_text">Do you want to set this Image as your title image?</string>
    <string name="dialog_set_title_image_title">Title Image</string>
    <string name="dialog_create_save">Do you want to save the Post as is?</string>
    <string name="dialog_create_dismiss">Dismiss this Post?</string>
    <string name="dialog_create_save_title">Save</string>
    <string name="dialog_create_dismiss_title">Dismiss</string>
    <string name="dialog_select_from">Select from&#8230;</string>
    <string name="dialog_close_mypost">Do you want to close this Post?</string>
    <string name="dialog_close_mypost_title">Close</string>
    <string name="dialog_select_action_title">Select Action</string>

    <!-- MYPOST -->
    <string name="post">Post</string>
    <string name="conversations">Conversations</string>
    <string name="matches">Matches</string>
    <string name="requests">Requests</string>

    <string name="close_post">Close Post</string>
    <string name="reopen_post">Reopen Post</string>
    <string name="draft_post">Use Post as Draft</string>

    <!-- POST -->
    <string name="send_request">Send Request</string>
    <string name="close_connection">Close Connection</string>

    <!-- Conversation -->
    <string name="conversation_message_hint">Send message</string>

    <string-array name="image_picker">
        <item>@string/camera</item>
        <item>@string/gallery</item>
    </string-array>

    <string-array name="postbox_closed_action_picker">
        <item>@string/draft_post</item>
        <item>@string/reopen_post</item>
    </string-array>

    <string-array name="postbox_open_action_picker">
        <item>@string/draft_post</item>
        <item>@string/close_post</item>
    </string-array>

    <string-array name="matches_action_picker">
        <item>@string/send_request</item>
        <item>@string/draft_post</item>
        <item>@string/close_connection</item>
    </string-array>
</resources>
