<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Research Studios Austria Forschungsges.m.b.H.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false"
            android:id="@+id/create_scrollview">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/createType"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"/>
        <Spinner
                android:id="@+id/typespinner"
                android:drawSelectorOnTop="true"
                android:prompt="@string/create_type_spinner_choose"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:layout_marginTop="@dimen/create_edit_margin_top"
                android:layout_marginBottom="@dimen/create_edit_margin_bottom"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/createTitle"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"/>
        <EditText
                android:id="@+id/create_title"
                android:hint="@string/create_title_demand_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginBottom="@dimen/create_edit_margin_bottom"
                android:layout_marginTop="@dimen/create_edit_margin_top"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/createDescription"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"/>
        <EditText
                android:id="@+id/create_description"
                android:hint="@string/create_description_demand_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:minLines="5"
                android:layout_marginBottom="@dimen/create_edit_margin_bottom"
                android:layout_marginTop="@dimen/create_edit_margin_top"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_tags"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/createTags"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_tags_2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/createTags2"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"/>
        <EditText
                android:id="@+id/create_tags"
                android:hint="@string/create_tags_demand_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginTop="@dimen/create_edit_margin_top"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"/>
        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_images"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/create_images_switch"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"
                android:layout_marginTop="@dimen/create_edit_margin_bottom"
                android:checked="false"
                android:textColor="@color/create_text_disabled"/>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/create_image_container"
                        android:layout_marginTop="@dimen/create_edit_margin_top"
                        android:visibility="gone">
            <include layout="@layout/include_image_pager"/>
        </RelativeLayout>
        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_location"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/create_location_switch"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"
                android:layout_marginTop="@dimen/create_edit_margin_bottom"
                android:textColor="@color/create_text_disabled"
                android:checked="false"
                />
        <EditText
                android:id="@+id/create_location"
                android:hint="@string/create_location_demand_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="@dimen/create_edit_margin_top"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"
                android:imeOptions="actionSearch"
                android:visibility="gone"/>
        <RelativeLayout
                android:id="@+id/create_location_container"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone">
            <com.google.android.gms.maps.MapView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/post_map"
                    android:layout_marginLeft="@dimen/create_edit_margin_lr"
                    android:layout_marginRight="@dimen/create_edit_margin_lr"/>
            <ImageView
                    android:id="@+id/transparent_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@android:color/transparent" />
        </RelativeLayout>
        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_datetime"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/create_datetime_switch"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"
                android:layout_marginTop="@dimen/create_edit_margin_bottom"
                android:textColor="@color/create_text_disabled"
                android:checked="false"/>
        <CheckBox
                android:text="@string/create_recurrence"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/create_recurrence_switch"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/create_edit_margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"
                android:checked="false"
                android:visibility="gone"/>
        <Button
                android:id="@+id/create_recurrencedate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_chooserecurrencedate"
                style="?android:attr/spinnerStyle"
                android:layout_marginBottom="@dimen/create_edit_margin_bottom"
                android:layout_marginTop="@dimen/create_edit_margin_top"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"
                android:paddingLeft="@dimen/create_edit_date_padding_lr"
                android:paddingRight="@dimen/create_edit_date_padding_lr"
                android:visibility="gone"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/create_datetime_container"
                android:layout_marginBottom="@dimen/create_edit_margin_bottom"
                android:layout_marginTop="@dimen/create_edit_margin_top"
                android:layout_marginLeft="@dimen/create_edit_margin_lr"
                android:layout_marginRight="@dimen/create_edit_margin_lr"
                android:visibility="gone">
            <Button
                    android:id="@+id/create_startdatetime_button"
                    android:layout_gravity="left|top"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/create_choosedatetime"
                    style="?android:attr/spinnerStyle"
                    android:paddingLeft="@dimen/create_edit_date_padding_lr"
                    android:paddingRight="@dimen/create_edit_date_padding_lr"
                    android:layout_weight="5"/>
            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/next"
                    android:paddingLeft="@dimen/create_edit_date_padding_lr"
                    android:paddingRight="@dimen/create_edit_date_padding_lr"
                    android:layout_weight="1" android:layout_gravity="center"/>
            <Button
                    android:id="@+id/create_enddatetime_button"
                    android:layout_gravity="right|top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_choosedatetime"
                    style="?android:attr/spinnerStyle"
                    android:paddingLeft="@dimen/create_edit_date_padding_lr"
                    android:paddingRight="@dimen/create_edit_date_padding_lr"
                    android:layout_weight="5"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>